# Dream_Engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/: default.toml
cmake/: Dependencies.cmake  patch_enkits.cmake
docs/: 2026-06-03-block-interaction-debug-session.md  2026-06-03-session-improvements.md  (+1 more)
engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
engine/audio/: AudioEngine.cpp  AudioEngine.hpp  OcclusionGrid.cpp  OcclusionGrid.hpp
engine/character/: CMakeLists.txt
engine/character/core/: AnimationController.cpp  AnimationController.hpp  AttackData.cpp  AttackData.hpp  CharacterAsset.hpp  CharacterCatalog.cpp  CharacterCatalog.hpp  CharacterComponents.hpp  CombatController.cpp  CombatController.hpp  CookedCharacterCache.cpp  CookedCharacterCache.hpp  GltfIngest.cpp  GltfIngest.hpp  HitDetection.cpp  HitDetection.hpp  HitReactSystem.cpp  HitReactSystem.hpp  InputBuffer.cpp  InputBuffer.hpp  SkeletonValidator.cpp  SkeletonValidator.hpp  cgltf_impl.cpp
engine/character/render/: CharacterPass.cpp  CharacterPass.hpp
engine/core/: CrashHandlerWin32.cpp  CrashHandlerWin32.hpp  EngineConfig.cpp  EngineConfig.hpp  FrameTimer.hpp  HardwareProbe.cpp  HardwareProbe.hpp  JobSystem.cpp  JobSystem.hpp  Log.cpp  Log.hpp  MemoryBudget.hpp  SimClock.hpp  math.hpp
engine/gameplay/: BlockInteraction.cpp  BlockInteraction.hpp  BlockMutation.hpp  BlockRegistry.hpp  BlockState.hpp  Camera.cpp  Camera.hpp  CameraSystem.cpp  CameraSystem.hpp  CreativeBlockPicker.hpp  Inventory.hpp  PlayerMotor.cpp  PlayerMotor.hpp  PlayerMotorConfig.hpp  PlayerSpawnReadyGate.cpp  PlayerSpawnReadyGate.hpp  VoxelMovementConfig.hpp
engine/movement/core/: ArenaLoader.cpp  ArenaLoader.hpp  CameraSystem.cpp  CameraSystem.hpp  CollisionWorld.cpp  CollisionWorld.hpp  ComponentStore.hpp  Components.hpp  EntityWorld.cpp  EntityWorld.hpp  InputSnapshot.hpp  Interpolation.hpp  MovementWorld.cpp  MovementWorld.hpp  PersistentId.hpp  PlayerMovement.cpp  PlayerMovement.hpp  SaveService.cpp  SaveService.hpp  TextParser.cpp  TextParser.hpp
engine/movement/debug_render/: DebugDrawPass.cpp  DebugDrawPass.hpp  ImGuiOverlay.cpp  ImGuiOverlay.hpp
engine/persist/: AtomicFile.cpp  AtomicFile.hpp  ChunkBinCodec.cpp  ChunkBinCodec.hpp  MinimalSaveBackend.cpp  MinimalSaveBackend.hpp  PlayerDat.cpp  PlayerDat.hpp  Quarantine.cpp  Quarantine.hpp  RegionFileSaveBackend.cpp  RegionFileSaveBackend.hpp  SaveService.hpp  WorldMeta.cpp  WorldMeta.hpp
engine/physics/: CollisionRemeshQueue.cpp  CollisionRemeshQueue.hpp  DebrisSystem.cpp  DebrisSystem.hpp  ObjectLayerMatrix.cpp  ObjectLayerMatrix.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  VoxelCapsuleResolver.cpp  VoxelCapsuleResolver.hpp
engine/platform/: Input.cpp  Input.hpp  Platform.cpp  Platform.hpp
engine/procgen/: HeightmapWorldgen.cpp  HeightmapWorldgen.hpp  TerrainGraph.cpp  TerrainGraph.hpp
engine/render/: BlockTextureArray.cpp  BlockTextureArray.hpp  FrustumCull.hpp  GpuDeferredFreeQueue.cpp  GpuDeferredFreeQueue.hpp  GpuMeshPool.cpp  GpuMeshPool.hpp  HostMemory.cpp  HostMemory.hpp  MeshUploadQueue.cpp  MeshUploadQueue.hpp  PassExtension.hpp  PerFrameGpuWrites.cpp  PerFrameGpuWrites.hpp  Renderer.cpp  Renderer.hpp  SectionVisibility.cpp  SectionVisibility.hpp  ShaderManager.cpp  ShaderManager.hpp  SkyPass.cpp  SkyPass.hpp  SnapshotRing.cpp  SnapshotRing.hpp  StagingRing.cpp  StagingRing.hpp  StreamingTerrainSystem.cpp  StreamingTerrainSystem.hpp  TerrainImpostorPass.cpp  TerrainImpostorPass.hpp  TerrainPass.cpp  TerrainPass.hpp  ThinTerrainPreview.cpp  ThinTerrainPreview.hpp  VkCheck.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDebug.cpp  VulkanDebug.hpp  WaterPass.cpp  (+2 more)
engine/ui/: UiHost.cpp  UiHost.hpp
engine/world/: BlockLight.cpp  BlockLight.hpp  BlockPos.hpp  Chunk.hpp  ChunkImpostor.cpp  ChunkImpostor.hpp  ChunkLifecycle.cpp  ChunkLifecycle.hpp  ChunkLodMesher.cpp  ChunkLodMesher.hpp  ChunkStore.cpp  ChunkStore.hpp  GreedyMesher.cpp  GreedyMesher.hpp  OriginRebase.cpp  OriginRebase.hpp  Section.hpp  SectionIndexing.hpp  StreamingConfig.cpp  StreamingConfig.hpp  StreamingSystem.cpp  StreamingSystem.hpp  TerrainLod.cpp  TerrainLod.hpp  WorldConfig.hpp  WorldEvents.hpp  WorldModule.cpp  WorldModule.hpp  WorldPosition.hpp
movement/: CMakeLists.txt  MovementApp.cpp  MovementApp.hpp  main.cpp
tests/: CMakeLists.txt
tests/audio/: test_occlusion_grid.cpp
tests/character/: test_animation_controller.cpp  test_attack_data.cpp  test_character_catalog.cpp  test_combo_fsm.cpp  test_gltf_ingest.cpp  test_hit_overlap.cpp  test_hit_window.cpp  test_input_buffer.cpp  test_skeleton_compat.cpp
tests/core/: test_default_toml.cpp  test_engine_config.cpp  test_job_system.cpp  test_math.cpp  test_sim_clock.cpp  test_smoke.cpp
tests/gameplay/: test_block_events.cpp
tests/movement/: test_arena_loader.cpp  test_camera_rig.cpp  test_collision.cpp  test_entity_world.cpp  test_save_service.cpp  test_text_parser.cpp
tests/persist/: test_minimal_save.cpp  test_player_dat_inventory.cpp  test_region_save.cpp
tests/physics/: test_capsule_resolver.cpp  test_collision_remesh_queue.cpp  test_debris_system.cpp  test_object_layer_matrix.cpp  test_physics_system_jolt.cpp
tests/procgen/: test_heightmap_worldgen.cpp  test_terrain_graph.cpp
tests/render/: test_build_snapshot_connectivity.cpp  test_chunk_lod_streaming.cpp  test_deferred_free_queue.cpp  test_gpu_mesh_pool.cpp  test_host_memory_alignment.cpp  test_section_occlusion.cpp  test_section_portal.cpp  test_section_visibility.cpp  test_snapshot_ring.cpp  test_staging_ring.cpp  test_streaming_terrain_events.cpp
tests/world/: test_block_light.cpp  test_chunk_impostor.cpp  test_chunk_lifecycle.cpp  test_chunk_lod_mesher.cpp  test_chunk_lod_selection.cpp  test_chunk_unload_gpu.cpp  test_greedy_mesher.cpp  test_indexing.cpp  test_occupancy.cpp  test_origin_rebase.cpp  test_pack_vertex_lod.cpp  test_palette.cpp  test_section_mesh_priority.cpp  test_section_render_meta.cpp  test_streaming.cpp  test_world_config.cpp  test_world_events.cpp
tools/: CMakeLists.txt
tools/anim_inspect/: main.cpp
(+74 files in other folders)
