cmake_minimum_required(VERSION 3.24)
project(VoxelEngine LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
    add_compile_options(/FS)
endif()
option(ENGINE_TRACY "Link Tracy" OFF)
include(cmake/Dependencies.cmake)
add_subdirectory(shaders)
add_subdirectory(engine)
add_subdirectory(game)
enable_testing()
add_subdirectory(tests)
