add_executable(engine_tests
    core/test_smoke.cpp
    core/test_math.cpp
    core/test_sim_clock.cpp
    core/test_engine_config.cpp
    core/test_default_toml.cpp
    core/test_job_system.cpp
    world/test_indexing.cpp
    world/test_world_config.cpp
    world/test_world_events.cpp
    world/test_origin_rebase.cpp
    world/test_palette.cpp
    world/test_occupancy.cpp
    world/test_chunk_lifecycle.cpp
    world/test_streaming.cpp
    world/test_greedy_mesher.cpp
    world/test_block_light.cpp
    world/test_chunk_unload_gpu.cpp
    procgen/test_heightmap_worldgen.cpp
    gameplay/test_block_events.cpp
    physics/test_capsule_resolver.cpp
    persist/test_minimal_save.cpp
    render/test_snapshot_ring.cpp
    render/test_deferred_free_queue.cpp
    render/test_host_memory_alignment.cpp
    render/test_staging_ring.cpp
    render/test_gpu_mesh_pool.cpp
)
target_link_libraries(engine_tests PRIVATE engine_core Catch2::Catch2WithMain)
target_compile_definitions(engine_tests PRIVATE ENGINE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
include(Catch)
catch_discover_tests(engine_tests)
